# schmuck-inventar

./: .env.template  .gitignore  README.md  evaluation.py  output.jsonl  output_annotation.jsonl  pyproject.toml  testral.py
config/: regions.yaml
resources/: example_output.json
schmuck_inventar/: detection.py  postprocessor.py  recognition.py  run.py  utils.py
schmuck_inventar/config/: regions.yaml  regions_dhd.yaml
tools/: README.md
