[project]
name = "schmuck-inventar"
version = "0.0.2"
authors = [
    { name = "Mathias Zinnen", email = "mathias.zinnen@gmail.com" }
]

description = "Read inventory cards, extract images, and create structured data."
readme = "README.MD"
requires-python= ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ultralytics",
    "appdirs",
    "ocrmac; sys.platform == 'Darwin'",
    "tqdm"
]

[tool.setuptools]
packages = ["schmuck_inventar"]

[project.scripts]
schmuck-inventar = "schmuck_inventar.run:main"