[project]
name = "schmuck-inventar"
version = "0.0.3"
authors = [
    { name = "Mathias Zinnen", email = "mathias.zinnen@gmail.com" }
]
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

description = "Read inventory cards, extract images, and create structured data."
readme = "README.MD"
requires-python= ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ultralytics",
    "appdirs",
    "ocrmac; sys.platform == 'darwin'",
    "tqdm",
    "Levenshtein"
]

[tool.setuptools]
packages = ["schmuck_inventar"]

[project.scripts]
schmuck-inventar = "schmuck_inventar.run:main"

[tool.hatch.build.targets.sdist]
include = ["config/regions.yaml]